Adding models to tests